# 477code

./: c_cpp_properties.json  ecte477_exam rand_server.py  rand_server.launch  settings.json
demonstration2-main/: CMakeLists.txt  package.xml
demonstration2-main/launch/: start_all.launch
demonstration2-main/scripts/: my_node.py
demonstration3-main/: CMakeLists.txt  package.xml
demonstration3-main/launch/: demo3.launch
demonstration3-main/scripts/: demo3.py
ecte477_exam/: CMakeLists.txt  package.xml
ecte477_exam/launch/: launch_all.launch  line_world.launch  rand_client.launch  rand_server.launch
ecte477_exam/scripts/: ecte477_exam rand_client.py  ecte477_exam rand_server.py  line_follower.py  line_world.py  rand_client.py
ecte477_exam/srv/: RandDist.srv
ecte477_exam/worlds/: line_world.world
ecte477_starter_python/: CMakeLists.txt  README.md  package.xml
ecte477_starter_python/launch/: beacons.launch  command_server.launch  navigator.launch  wall_follower.launch
ecte477_starter_python/scripts/: beacon_node.py  colours.py  command_server_node.py  navigator_node.py  wall_follower_node.py
lab_10_package/: CMakeLists.txt  package.xml
lab_10_package/launch/: line_follower.launch  line_world_1.launch  line_world_2.launch
lab_10_package/scripts/: line_follower.py
lab_10_package/worlds/: line_world_1.world  line_world_2.world
my_package/: CMakeLists.txt  package.xml
my_package/launch/: start_all.launch
my_package/msg/: Beacon.msg
my_package/rviz/: my_layout_1.rviz
my_package/scripts/: my_node.py  (+2 more)
zz_package/: CMakeLists.txt  package.xml
(+8 files in other folders)
